@@ -314,6 +314,9 @@ public class DFSClient implements java.io.Closeable, RemotePeerFactory,
     final long shortCircuitMmapCacheRetryTimeout;
     final long shortCircuitCacheStaleThresholdMs;
 
+    public BlockReaderFactory.FailureInjector brfFailureInjector =
+      new BlockReaderFactory.FailureInjector();
+
     public Conf(Configuration conf) {
       // The hdfsTimeout is currently the same as the ipc timeout
       hdfsTimeout = Client.getTimeout(conf);
