@@ -173,14 +173,17 @@ public class Sender implements DataTransferProtocol {
   @Override
   public void requestShortCircuitFds(final ExtendedBlock blk,
       final Token<BlockTokenIdentifier> blockToken,
-      SlotId slotId, int maxVersion) throws IOException {
-    OpRequestShortCircuitAccessProto.Builder builder = OpRequestShortCircuitAccessProto.newBuilder()
-        .setHeader(DataTransferProtoUtil.buildBaseHeader(
-         blk, blockToken)).setMaxVersion(maxVersion);
+      SlotId slotId, int maxVersion, boolean supportsReceiptVerification)
+        throws IOException {
+    OpRequestShortCircuitAccessProto.Builder builder =
+        OpRequestShortCircuitAccessProto.newBuilder()
+          .setHeader(DataTransferProtoUtil.buildBaseHeader(
+            blk, blockToken)).setMaxVersion(maxVersion);
     if (slotId != null) {
       builder.setSlotId(PBHelper.convert(slotId));
     }
-    OpRequestShortCircuitAccessProto proto = builder.build();    
+    builder.setSupportsReceiptVerification(supportsReceiptVerification);
+    OpRequestShortCircuitAccessProto proto = builder.build();
     send(out, Op.REQUEST_SHORT_CIRCUIT_FDS, proto);
   }
 
